Fix broken CSS

--- a/src/pretalx/static/common/css/base.css
+++ b/src/pretalx/static/common/css/base.css
@@ -1034,7 +1034,7 @@ pl-0 {
   .d-print-none {
     display: none !important;
   }
-  a:not(role="button") {
+  a:not([role="button"]) {
     text-decoration: underline;
   }
   pre {
